# hedgehog

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  Readme.md  Readme_AI.json  _config.yml  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_000000_000002.html  dir_000000_000005.html  dir_000000_000014.html  dir_000000_000023.html  dir_000000_000031.html  dir_000002_000005.html  dir_000002_000007.html  dir_000002_000031.html  dir_000003_000002.html  dir_000003_000005.html  dir_000003_000014.html  dir_000003_000019.html  dir_000003_000031.html  dir_000005_000002.html  dir_000005_000007.html  dir_000005_000031.html  dir_000006_000000.html  dir_000006_000005.html  dir_000006_000013.html  dir_000007_000002.html  dir_000007_000005.html  dir_000007_000031.html  dir_000008_000005.html  dir_000008_000007.html  dir_000008_000009.html  dir_000009_000005.html  dir_000009_000007.html  dir_000009_000024.html  (+420 more)
UMLDev/: main.cpp
_includes/: footer.html  head.html
cmake-modules/: FindGLOG.cmake  FindHedgehog.cmake
cmake_modules/: FindHedgehog.cmake
doxygen/: hedgehog.cfg  new_header.html
hedgehog/: hedgehog.h  version.h
html/: annotated.html  annotated_dup.js  (+157 more)
tests/: CMakeLists.txt  testAll.cc  testGraph.h  test_hedgehog.cc
tests/data_structures/compile_time_analysis/graphs/: graph_const_int_const_int.h  graph_int_int.h  inside_graph.h
tests/data_structures/compile_time_analysis/static_tests/: test_critical_path.h
tests/data_structures/compile_time_analysis/tasks/: task_const_int_const_int.h  task_int_int.h  task_int_int_with_can_terminate.h
tests/data_structures/cuda_tasks/: cuda_copy_in_gpu.h  cuda_copy_out_gpu.h  cuda_int_to_memory_managed_int.h  cuda_link2_example.cpp  cuda_link2_example.h  cuda_link_example.cpp  cuda_link_example.h  cuda_product_task.h
tests/data_structures/data/: a.h  b.h  c.h  d.h  dynamic_managed_memory.h  e.h  f.h  static_managed_memory.h
tests/data_structures/datas/: cuda_matrix_block_data.h  data_type.h  dynamic_memory_manage_data.h  matrix_block_data.h  matrix_data.h  static_memory_manage_data.h
tests/data_structures/execution_pipelines/: execution_pipeline_int_double_to_int.h  execution_pipeline_int_to_int.h  execution_pipeline_int_to_static_memory_managed_int.h  int_execution_pipeline.h  int_float_double_execution_pipeline.h
tests/data_structures/graph/: int_float_double_graph.h
tests/data_structures/implementors/: multi_priority_queue_receivers.h  priority_queue_receiver.h
tests/data_structures/matrix_multiplication/data/: data_type.h  matrix_block_data.h  matrix_data.h
tests/data_structures/matrix_multiplication/state/: input_block_state.h  partial_computation_state.h  partial_computation_state_manager.h
tests/data_structures/matrix_multiplication/task/: addition_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h  product_task.h
tests/data_structures/memory_managers/: dynamic_memory_manager.h
tests/data_structures/state_managers/: partial_computation_state_manager.h
tests/data_structures/states/: cuda_input_block_state.h  def_to_abc_state.h  int_state.h  output_state.h  partial_computation_state.h  priority_queue_state_manager.h  state_int_float_to_int.h
tests/data_structures/tasks/: abc_to_def_task.h  abstract_priority_queue_task.h  addition_task.h  atomic_int_int.h  double_task.h  dynamic_size_t_to_managed_memory.h  float_double_task.h  float_task.h  float_to_int_cycle.h  int_double_char_to_float.h  int_double_float.h  int_double_task.h  int_float_double_task.h  int_float_task.h  int_float_to_double.h  int_float_to_int.h  int_int_priority_queue_task.h  int_task.h  int_to_dynamic_memory_managed_int.h  int_to_int.h  int_to_static_memory_managed_int.h  limited_int_int.h  link2_example.cpp  link2_example.h  link_example.cpp  link_example.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h  mix_int_int.h  static_memory_managed_int_dynamic_memory_managed_int_to_static_memory_managed_int.h  static_size_t_to_managed_memory.h  static_size_t_to_managed_memory_cuda.h  test_specialized_lambda_task.h
tests/graphs/big_example/: test_big_example.h
tests/graphs/big_example/ep/: inner_ep.h
tests/graphs/big_example/states/: test_state.h
tests/graphs/big_example/tasks/: input_task.h  input_task_2.h  output_task.h  output_task_2.h  task_bda.h  task_ic.h
tests/graphs/big_example/types/: a.h  b.h  c.h
tests/graphs/cuda/: test_cuda.h
tests/graphs/cycle/: test_cycle.h
tests/graphs/cycle/states/: my_state.h
tests/graphs/cycle/tasks/: my_task.h  my_task_2.h
tests/graphs/ep/: test_ep.h
tests/graphs/ep/ep/: if_to_iep.h
tests/graphs/ep/tasks/: epif_to_i.h  if_to_i.h  if_to_i_ep_in.h
tests/graphs/ep_composition/: test_ep_composition.h
tests/graphs/ep_composition/ep/: iiep.h
tests/graphs/ep_composition/tasks/: ii_task.h
tests/graphs/memory_manager/: test_mm_example.h
tests/graphs/memory_manager/data/: dynamic_matrix_data.h  matrix_data.h
tests/graphs/memory_manager/ep/: iiep_mm.h
tests/graphs/memory_manager/memory_manager/: cuda_mm.h  dynamic_mm.h  mm.h  static_mm.h
tests/graphs/memory_manager/task/: my_cuda_task.h  my_dynamic_task.h  my_static_task.h  output_md_task.h
tests/graphs/partial_input/: test_partial_input.h
tests/graphs/partial_input/ep/: iifep_partial_input.h
tests/graphs/partial_input/task/: task_fi_partial_input.h  task_ii_partial_input.h
tests/graphs/small_example/: test_small_example.h
tests/graphs/small_example/tasks/: ito_f.h
tests/tests/: test_complex_graph.h  test_cuda.h  test_cycles.h  test_execution_pipeline.h  test_execution_pipeline_composition.h  test_link.cpp  test_link.h  test_link2.cpp  test_link2.h  test_memory_manager.h  test_simple_partial_input.h  test_small_graph.h
tests/tests_impl/: test_complex_graph.h  test_lambda_task.h  test_memory_manager.h  test_simple_graph.h  test_state_manager.h  test_tools.h
tests/tests_impl/compile_time_tests/: test_basic.h  test_critical_path.h  test_cycle_improved.h  test_error_message.h  test_matrix_multiplication.h  test_race_condition.h
tests/utils/: cuda_utils.h
(+4115 files in other folders)
